--- a/webui/templates/400.jinja2
+++ b/webui/templates/400.jinja2
@@ -4,12 +4,6 @@
 
 {% block content %}
 
-    <div class="content">
-        <h1>400</h1>
-        <p>can't really understand what you are trying to do here</p>
-        <pre>{{ exc.detail }}</pre>
-    </div>
-
-    <script>document.addEventListener('DOMContentLoaded', function () { plausible('400', { props: { path: document.location.pathname } }); });</script>
+    {% include "htmx/400.jinja2" %}
 
 {% endblock %}
