--- a/webui/templates/404.jinja2
+++ b/webui/templates/404.jinja2
@@ -4,12 +4,6 @@
 
 {% block content %}
 
-    <div class="content">
-        <h1>404</h1>
-        <p>can't find what you are looking for</p>
-        <pre>{{ exc.detail }}</pre>
-    </div>
-
-    <script>document.addEventListener('DOMContentLoaded', function () { plausible('404', { props: { path: document.location.pathname } }); });</script>
+    {% include "htmx/404.jinja2" %}
 
 {% endblock %}
