--- a/webui/templates/htmx/404.jinja2
+++ b/webui/templates/htmx/404.jinja2
@@ -8,4 +8,4 @@
 
     <script>document.addEventListener('DOMContentLoaded', function () { plausible('404', { props: { path: document.location } }); });</script>
 
-{{ httmx_title(request, '404') }}
+{{ htmx_title(request, '404') }}
