--- a/webui/templates/htmx/500.jinja2
+++ b/webui/templates/htmx/500.jinja2
@@ -8,4 +8,4 @@
 
     <script>document.addEventListener('DOMContentLoaded', function () { plausible('500', { props: { path: document.location } }); });</script>
 
-{{ httmx_title(request, '500') }}
+{{ htmx_title(request, '500') }}
