--- a/webui/templates/htmx/400.jinja2
+++ b/webui/templates/htmx/400.jinja2
@@ -8,4 +8,4 @@
 
     <script>document.addEventListener('DOMContentLoaded', function () { plausible('400', { props: { path: document.location } }); });</script>
 
-{{ httmx_title(request, '400') }}
+{{ htmx_title(request, '400') }}
