--- a/webui/templates/upload_source.jinja2
+++ b/webui/templates/upload_source.jinja2
@@ -4,49 +4,6 @@
 
 {% block content %}
 
-<div class="content">
-
-    <div class="header">
-        <h3>Upload source code for program <span class="mono-only">{{ program_id }}</span></h3>
-    </div>
-
-    {% if has_leo_source %}
-        <div class="callout warning">
-            The source code has already been uploaded for this program.
-        </div>
-    {% elif unsupported_import %}
-        <div class="callout warning">
-           Programs with imports other than <span class="mono">credits.aleo</span> are not supported yet.
-        </div>
-    {% else %}
-        {% if message %}
-            <div class="callout warning">
-                {{ message }}
-            </div>
-        {% endif %}
-        <form action="/submit_source" method="post">
-            <label>Leo source code (<span class="mono">main.leo</span>):
-                <textarea name="source">{{ source }}</textarea>
-            </label>
-            <input type="hidden" name="id" value="{{ program_id }}">
-            {% for import in imports %}
-                <input type="hidden" name="imports[]" value="{{ import }}">
-                {% if import == "credits" %}
-                    <input type="hidden" name="import_programs[]" value="">
-                {% else %}
-                    <label>Imported program <span class="mono-only">{{ import }}.leo</span>:
-                    {% if import_programs[loop.index0] %}
-                        <textarea name="import_programs[]" readonly>{{ import_programs[loop.index0] }}</textarea>
-                    {% else %}
-                        <textarea name="import_programs[]"></textarea>
-                    {% endif %}
-                    </label>
-                {% endif %}
-            {% endfor %}
-            <button type="submit" class="button">Submit</button>
-        </form>
-    {% endif %}
-
-</div>
+{% include "htmx/upload_source.jinja2" %}
 
 {% endblock %}
