--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -132,12 +132,12 @@
         $(document).foundation()
     })
 
-    htmx.on("htmx:responseError", function(e) {
-        const container = document.getElementById("htmx-body")
-        error = e.detail.xhr.response
-        container.innerHTML = error
-        history.pushState(null, "", e.detail.xhr.responseURL.split("&")[0])
-    });
+    htmx.on("htmx:beforeSwap", function(e) {
+        if (e.detail.xhr.status >= 400) {
+            e.detail.shouldSwap = true
+            e.detail.isError = false
+        }
+    })
 
     {% if "PLAUSIBLE" | get_env %}
         const el = document.getElementById('plausible-optout');
