add more hx boost

--- a/webui/templates/htmx/address.jinja2
+++ b/webui/templates/htmx/address.jinja2
@@ -1,7 +1,7 @@
 
 {% from "macros.jinja2" import data_line, data_line_safe, htmx_title %}
 
-    <div class="content">
+    <div class="content" hx-boost="true" hx-target="#htmx-body" hx-swap="innerHTML show:no" hx-push-url="true">
 
         <div id="header">
             <h3>Address {{ address_trunc }}</h3>
