--- a/webui/templates/htmx/address_solution.jinja2
+++ b/webui/templates/htmx/address_solution.jinja2
@@ -1,6 +1,6 @@
 {% from "macros.jinja2" import nav, htmx_title %}
 
-    <div class="content">
+    <div class="content" hx-boost="true" hx-target="#htmx-body" hx-swap="innerHTML show:no" hx-push-url="true">
 
         <div id="header">
             <h3>Solutions from {{ address_trunc }}</h3>
