--- a/webui/templates/down.jinja2
+++ b/webui/templates/down.jinja2
@@ -92,11 +92,13 @@ a[href]:after{content:" (" attr(href) ")";}
     </div>
 </div>
 <div class="content">
-The explorer is being upgraded to support the new network features. It might take a few days or weeks.
+    The explorer is being upgraded to support the new network features. It might take a few days or weeks. <br>
+    <br>
+    Follow the source repo to keep track of the progress.
 </div>
 <div class="footer-container">
     <div class="footer">
-        This site is protected by <a href="https://www.cloudflare.com/" target="_blank">Cloudflare</a>.
+        <a href="https://github.com/HarukaMa/aleo-explorer" target="_blank">Open source</a> Aleo explorer made by Haruka. <br>
     </div>
 </div>
 </body>
