--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -16,7 +16,7 @@
             </p>
             {% if "DEBUG_SKIP_COINBASE" | get_env %}
                 <p>
-                    For performance reasons, this instance of the explorer won't track the coinbase solutions and the
+                    For performance reasons, this instance of the explorer won't track the puzzle solutions and the
                     rewards of individual provers.
                 </p>
             {% endif %}
@@ -79,11 +79,11 @@
                     <th>Transactions</th>
                     <th>Proof target</th>
                     <th>Coinbase target</th>
+                    <th>Block reward</th>
+                    <th>Puzzle reward</th>
                     {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-                        <th>Coinbase rewards</th>
-                        <th>Coinbase solutions</th>
+                        <th>Puzzle solutions</th>
                     {% endif %}
-                    <th>Validator</th>
                 </tr>
                 </thead>
                 <tbody hx-boost="true" hx-target="#htmx-body" hx-swap="innerHTML show:no" hx-push-url="true">
@@ -95,11 +95,11 @@
                         <td>{{ block.transaction_count }}</td>
                         <td>{{ block.proof_target | format_number | safe }}</td>
                         <td>{{ block.coinbase_target | format_number | safe }}</td>
+                        <td>{{ block.block_reward | format_aleo_credit | safe }}</td>
+                        <td>{{ ((block.coinbase_reward // 2) | format_aleo_credit | safe }}</td>
                         {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-                            <td>{% if block.coinbase_reward %}{{ ((block.coinbase_reward | int) // 2) | format_aleo_credit | safe }}{% else %}-{% endif %}</td>
                             <td>{% if block.coinbase_reward %}{{ block.partial_solution_count }}{% else %}-{% endif %}</td>
                         {% endif %}
-                        <td>-</td>
                     </tr>
                 {% endfor %}
                 </tbody>
