--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -96,7 +96,7 @@
                         <td>{{ block.proof_target | format_number | safe }}</td>
                         <td>{{ block.coinbase_target | format_number | safe }}</td>
                         <td>{{ block.block_reward | format_aleo_credit | safe }}</td>
-                        <td>{{ ((block.coinbase_reward // 2) | format_aleo_credit | safe }}</td>
+                        <td>{{ (block.coinbase_reward // 2) | format_aleo_credit | safe }}</td>
                         {% if not "DEBUG_SKIP_COINBASE" | get_env %}
                             <td>{% if block.coinbase_reward %}{{ block.partial_solution_count }}{% else %}-{% endif %}</td>
                         {% endif %}
