add various address stats

--- a/webui/static/base_style_v5.css
+++ b/webui/static/base_style_v5.css
@@ -229,7 +229,7 @@ pre {
     font-family: monospace !important;
 }
 
-#transitions, #rejected-transitions {
+#rejected-transitions {
     margin-top: 20px;
 }
 
