add address search locations

--- a/webui/templates/htmx/faq.jinja2
+++ b/webui/templates/htmx/faq.jinja2
@@ -10,9 +10,9 @@
         <p>This usually means your address hasn't publicly appeared on the blockchain. Addresses would be logged when:</p>
         <ul>
             <li>A prover submits a valid coinbase puzzle solution with the address</li>
-            <li>A validator generates a new block (not tracked right now)</li>
             <li>An address deploys a program</li>
-            <li>(more to come when the network has more features)</li>
+            <li>An address receives public credits</li>
+            <li>An address appears in any public or finalize input</li>
         </ul>
         <p>
             The explorer could only track what's included in the blocks, so if your address hasn't interacted with the
